Added Emailer, MQTT Auth

--- a/mqtt-server/src/html/live_sensors.ejs
+++ b/mqtt-server/src/html/live_sensors.ejs
@@ -3,8 +3,11 @@
     <head>
     <title>Sensor Live Display</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta content="utf-8" http-equiv="encoding">
     <script src="src/javascript/sensors.js"></script>
     <link rel="stylesheet" href="src/css/main.css">
+    <link rel="icon" href="data:,">
 
     </head>
     <body onload="webSocketConnect();" onunload="webSocket.disconnect();">
@@ -12,9 +15,9 @@
         <h1>Sensor Live Display</h1>
         <div id="sensorGrid"></div>
         <br>
-        <div id="status">unknown</div>
+        <div id="status">WebSocket: unknown</div>
 
     </body>
-    <footer>version: 0.2.0</footer>
+    <footer>version: 0.6.4</footer>
     <!--/ --.- .-. -.-- /-->
 </html>
